--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "analyze": "source-map-explorer build/static/js/main.*",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "TZ=GMT react-scripts test",
+    "test": "TZ=GMT CI=true react-scripts test",
+    "test:watch": "TZ=GMT react-scripts test",
     "test:ci": "TZ=GMT CI=true JEST_JUNIT_OUTPUT=../reports/junit/${npm_package_name}-test-results.xml yarn test --runInBand --ci --reporters=jest-junit --reporters=default",
     "eject": "react-scripts eject",
     "lint": "tslint 'src/**/*.ts?(x)'",
