--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   ],
   "scripts": {
     "build:frontend": "lerna run build --scope frontend",
-    "lint": "lerna exec yarn lint",
-    "test": "lerna exec yarn test",
+    "lint": "lerna run lint",
+    "test": "lerna run test",
     "test:ci": "lerna exec --concurrency 1 yarn test:ci",
     "test:e2e": "lerna run --concurrency 1 test:e2e",
     "coverage": "lerna exec --concurrency 1 yarn coverage",
