--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@types/node": "^10.10.3",
-    "jest": "^24.1.0",
+    "jest": "23.6.0",
     "serverless-offline": "^3.25.14",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-stack-output": "^0.2.3",
