--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.1.19",
+    "aws-amplify-react": "^2.3.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0"
   },
   "devDependencies": {
+    "@anttiviljami/serverless-stack-output": "^0.3.1",
     "@types/jest": "^24.0.5",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
+    "dotenv": "^6.2.0",
+    "fs-extra": "^7.0.1",
+    "serverless-appsync-plugin": "^1.0.9",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
-    "serverless-stack-output": "^0.2.3",
     "source-map-explorer": "^1.7.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
