--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@anttiviljami/serverless-stack-output": "^0.3.1",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.10.3",
+    "dotenv": "^6.2.0",
+    "fs-extra": "^7.0.1",
     "jest": "23.6.0",
     "serverless-offline": "^3.25.14",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-stack-output": "^0.2.3",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "tslint-config-prettier": "^1.18.0",
