--- a/services/common/environment/config.example.json
+++ b/services/common/environment/config.example.json
@@ -1,3 +1,5 @@
 {
-  "region": "REGION_VALUE"
+  "region": "REGION_VALUE",
+  "alarmsTopicEmail": "admin@yourcompany.com",
+  "notificationsTopicEmail": "admin@yourcompany.com"
 }
