--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "monitoring-service": "^0.0.1"
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
@@ -39,6 +40,7 @@
     "lint": "tslint 'src/**/*.ts?(x)'",
     "coverage": "TZ=GMT yarn test --coverage",
     "deploy:dev": "serverless deploy --stage dev",
+    "remove:dev": "serverless emptyS3Bucket --stage dev && serverless remove --stage dev",
     "publish:dev": "serverless syncToS3 --stage dev && serverless invalidateCloudFrontCache --stage dev",
     "prettier": "prettier --write src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js",
     "prettier:ci": "prettier --list-different src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js"
