--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -9,24 +9,33 @@
     "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml jest --runInBand --ci",
     "coverage": "jest --coverage",
     "deploy:dev": "serverless deploy --stage dev",
+    "remove:dev": "serverless remove --stage dev",
     "prettier": "prettier --write src/**/*.ts",
     "prettier:ci": "prettier --list-different src/**/*.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aws-sdk": "^2.405.0",
+    "axios": "^0.18.0"
+  },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
+    "@types/aws-lambda": "^8.10.19",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.10.3",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
     "jest": "23.6.0",
+    "serverless-iam-roles-per-function": "^1.0.4",
     "serverless-offline": "^3.25.14",
     "serverless-plugin-tracing": "^2.0.0",
+    "serverless-pseudo-parameters": "^2.4.0",
+    "serverless-step-functions": "^1.13.0",
+    "serverless-webpack": "^5.2.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3",
-    "webpack": "^4.29.4"
+    "webpack": "^4.29.5"
   },
   "author": "Erez Rokah",
   "license": "MIT"
