--- a/services/monitoring-service/serverless.yml
+++ b/services/monitoring-service/serverless.yml
@@ -43,7 +43,7 @@ stepFunctions:
             path: spanout
             method: POST
         - schedule:
-            rate: rate(5 minutes)
+            rate: rate(1 minute)
             enabled: true
       name: ${self:service}-${self:custom.currentStage}-span-out-step-function
       definition:
