fix remove command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prettier": "lerna exec yarn prettier",
     "prettier:ci": "lerna exec yarn prettier:ci",
     "run:all:dev": "yarn deploy:dev && yarn build:frontend && yarn publish:frontend:dev",
-    "remove:all:dev": "lerna run --concurrency 1 remove:dev --scope frontend && lerna run --concurrency 1 remove:dev --scope monitoring*"
+    "remove:all:dev": "lerna run --concurrency 1 remove:dev --scope 'frontend' && lerna run --concurrency 1 remove:dev --scope 'monitoring-*'"
   },
   "devDependencies": {
     "jest-junit": "^6.2.1",
