--- a/services/monitoring-service/resources/snsTopics.yml
+++ b/services/monitoring-service/resources/snsTopics.yml
@@ -1,12 +1,12 @@
 Resources:
-  AlarmsTopic:
-    Type: AWS::SNS::Topic
-    Properties:
-      DisplayName: 'Alarms topic for monitoring step function'
-      TopicName: ${self:custom.alarmsTopicName}
-      Subscription:
-        - Endpoint: ${self:custom.alarmsTopicEmail}
-          Protocol: email
+  # AlarmsTopic:
+  #   Type: AWS::SNS::Topic
+  #   Properties:
+  #     DisplayName: 'Alarms topic for monitoring step function'
+  #     TopicName: ${self:custom.alarmsTopicName}
+  #     Subscription:
+  #       - Endpoint: ${self:custom.alarmsTopicEmail}
+  #         Protocol: email
 
   NotificationsTopic:
     Type: AWS::SNS::Topic
