add state machine api autherization and UI refersh button

--- a/frontend/.env.example.local
+++ b/frontend/.env.example.local
@@ -3,3 +3,4 @@ REACT_APP_COGNITO_REGION=REACT_APP_COGNITO_REGION_VALUE
 REACT_APP_APPSYNC_REGION=REACT_APP_APPSYNC_REGION_VALUE
 REACT_APP_USER_POOL_ID=REACT_APP_USER_POOL_ID_VALUE
 REACT_APP_USER_POOL_WEB_CLIENT_ID=REACT_APP_USER_POOL_WEB_CLIENT_ID_VALUE
+REACT_APP_REST_API=REACT_APP_REST_API_VALUE
