--- a/frontend/resources/cognito.yml
+++ b/frontend/resources/cognito.yml
@@ -1,16 +1,4 @@
 Resources:
-  # Amazon Cognito user pool
-  UserPool:
-    Type: 'AWS::Cognito::UserPool'
-    Description: 'An Amazon Cognito user pool for authenticating users'
-    Properties:
-      UserPoolName: ${self:service}-${self:custom.currentStage}-user-pool
-
-      AliasAttributes:
-        - preferred_username
-      AutoVerifiedAttributes:
-        - email
-
   # An app client for the Amazon Cognito user pool
   UserPoolClient:
     Type: 'AWS::Cognito::UserPoolClient'
@@ -18,13 +6,10 @@ Resources:
     Properties:
       ClientName: ${self:service}-${self:custom.currentStage}-appsync-client
       GenerateSecret: false
-      UserPoolId: { Ref: UserPool }
+      UserPoolId:
+        Fn::ImportValue: '${self:custom.monitoringServiceName}:${self:custom.currentStage}:UserPoolId'
 
 Outputs:
-  UserPoolId:
-    Value:
-      Ref: UserPool
-
   UserPoolClientId:
     Value:
       Ref: UserPoolClient
