--- a/services/common/package.json
+++ b/services/common/package.json
@@ -1,7 +1,11 @@
 {
   "name": "common",
+  "private": true,
   "version": "0.0.1",
   "description": "Shared Services Code",
   "author": "Erez Rokah",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "print:name": "echo ${npm_package_name}"
+  }
 }
