--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "aws-amplify-react": "^2.3.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
@@ -18,8 +19,10 @@
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
+    "@types/react-helmet": "^5.0.8",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
+    "monitoring-service": "file:./../services/monitoring-service",
     "serverless-appsync-plugin": "^1.0.9",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
@@ -27,8 +30,7 @@
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3",
-    "monitoring-service": "file:./../services/monitoring-service"
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
