--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -23,10 +23,13 @@
     "@anttiviljami/serverless-stack-output": "^0.3.1",
     "@types/aws-lambda": "^8.10.19",
     "@types/jest": "^23.3.2",
+    "@types/mockdate": "^2.0.0",
     "@types/node": "^10.10.3",
+    "common": "file:./../common",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
     "jest": "23.6.0",
+    "mockdate": "^2.0.2",
     "serverless-iam-roles-per-function": "^1.0.4",
     "serverless-offline": "^3.25.14",
     "serverless-plugin-tracing": "^2.0.0",
@@ -37,8 +40,7 @@
     "ts-loader": "^5.3.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3",
-    "webpack": "^4.29.5",
-    "common": "file:./../common"
+    "webpack": "^4.29.5"
   },
   "author": "Erez Rokah",
   "license": "MIT"
