--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,13 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-test-renderer": "^16.8.1",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
+    "jest-dom": "^3.1.2",
     "monitoring-service": "file:./../services/monitoring-service",
+    "react-test-renderer": "^16.8.2",
+    "react-testing-library": "^5.9.0",
     "serverless-appsync-plugin": "^1.0.9",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
@@ -59,5 +63,14 @@
     "not op_mini all"
   ],
   "author": "Erez Rokah",
-  "license": "MIT"
+  "license": "MIT",
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!/node_modules/",
+      "!src/index.tsx",
+      "!src/components/index.tsx",
+      "!src/serviceWorker.ts"
+    ]
+  }
 }
