add ui tests coverage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,8 @@
       "!/node_modules/",
       "!src/index.tsx",
       "!src/components/index.tsx",
-      "!src/serviceWorker.ts"
+      "!src/serviceWorker.ts",
+      "!src/setupTests.ts"
     ]
   }
 }
