--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:frontend": "lerna run build --scope frontend",
     "lint": "lerna run lint",
     "test": "lerna run test",
-    "test:ci": "lerna exec --concurrency 1 yarn test:ci",
+    "test:ci": "lerna run --concurrency 1 test:ci",
     "test:e2e": "lerna run --concurrency 1 test:e2e",
-    "coverage": "lerna exec --concurrency 1 yarn coverage",
+    "coverage": "lerna run --concurrency 1 coverage",
     "deploy:dev": "lerna run deploy:dev",
     "publish:frontend:dev": "lerna run publish:dev --scope frontend",
     "prettier": "lerna exec yarn prettier",
