add cloudfront compression

--- a/frontend/resources/cloudfront.yml
+++ b/frontend/resources/cloudfront.yml
@@ -58,6 +58,7 @@ Resources:
             - PATCH
             - POST
             - PUT
+          Compress: true
           ## The origin id defined above
           TargetOriginId: WebApp
           ## Defining if and how the QueryString and Cookies are forwarded to the origin which in this case is S3
