--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml jest --runInBand --ci",
+    "test:e2e": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-e2e-test-results.xml jest --config=jest.config.e2e.js --runInBand --ci",
     "coverage": "jest --coverage",
     "deploy:dev": "serverless deploy --stage dev",
     "remove:dev": "serverless remove --stage dev",
@@ -29,6 +30,7 @@
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
     "jest": "23.6.0",
+    "jest-e2e-serverless": "^0.0.18",
     "mockdate": "^2.0.2",
     "serverless-iam-roles-per-function": "^1.0.4",
     "serverless-offline": "^3.25.14",
