--- a/services/monitoring-service/serverless.yml
+++ b/services/monitoring-service/serverless.yml
@@ -25,7 +25,8 @@ custom:
   dataTableName: ${self:service}-data-table-${self:custom.currentStage}
   endpointsTableName: ${self:service}-endpoints-table-${self:custom.currentStage}
 
-  checkEndpointStepFunction: ${self:service}-${self:custom.currentStage}-check-endpoint-step-function
+  checkEndpointStepFunction: check-endpoint-step-function-${self:service}-${self:custom.currentStage}
+  checkEndpointStepFunctionId: CheckDashendpointDashstepDashfunctionDashmonitoringDashserviceDash${self:custom.currentStage}
 
   output:
     handler: ./scripts/stackOutput.handler
@@ -50,7 +51,7 @@ stepFunctions:
         - schedule:
             rate: rate(2 hours)
             enabled: false
-      name: ${self:service}-${self:custom.currentStage}-fan-out-step-function
+      name: fan-out-step-function-${self:service}-${self:custom.currentStage}
       definition:
         Comment: 'A step function to fan-out several other step functions'
         StartAt: Fanout
@@ -59,6 +60,10 @@ stepFunctions:
             Type: Task
             Resource: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${self:custom.currentStage}-fanout
             End: true
+      dependsOn:
+        - EndpointsTable
+        - UserPool
+        - ApiGatewayAuthorizer
 
     checkEndpointStepFunction:
       name: ${self:custom.checkEndpointStepFunction}
@@ -132,6 +137,7 @@ stepFunctions:
         # - AlarmsTopic
         - NotificationsTopic
         - MonitoringDataTable
+
       # alarms:
       #   topics:
       #     ok: ${self:custom.alarmsTopicArn}
@@ -196,3 +202,4 @@ resources:
   - ${file(resources/snsTopics.yml)}
   - ${file(resources/cognito.yml)}
   - ${file(resources/authorizer.yml)}
+  - ${file(resources/outputs.yml)}
