--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -5,11 +5,11 @@
   "description": "Monitoring Service",
   "scripts": {
     "lint": "tslint 'src/**/*.ts'",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
-    "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml jest --runInBand --ci",
-    "test:e2e": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-e2e-test-results.xml jest --config=jest.config.e2e.js --runInBand --ci",
-    "coverage": "jest --coverage",
+    "test:ci": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-test-results.xml yarn test --runInBand --ci",
+    "test:e2e": "JEST_JUNIT_OUTPUT=../../reports/junit/${npm_package_name}-e2e-test-results.xml yarn test --runInBand --ci --config=jest.config.e2e.js",
+    "coverage": "yarn test --coverage",
     "deploy:dev": "serverless deploy --stage dev",
     "remove:dev": "serverless remove --stage dev",
     "prettier": "prettier --write src/**/*.ts",
