add sns topic validations to e2e tests

--- a/services/monitoring-service/resources/snsTopics.yml
+++ b/services/monitoring-service/resources/snsTopics.yml
@@ -16,3 +16,8 @@ Resources:
       Subscription:
         - Endpoint: ${self:custom.adminEmail}
           Protocol: email
+
+Outputs:
+  NotificationsTopicArn:
+    Value:
+      Ref: NotificationsTopic
