handle endpoint timeouts

--- a/services/monitoring-service/serverless.yml
+++ b/services/monitoring-service/serverless.yml
@@ -153,6 +153,7 @@ stepFunctions:
 functions:
   checkEndpoint:
     handler: src/checkEndpointHandler.checkEndpoint
+    timeout: 15
   aggregateData:
     handler: src/aggregateDataHandler.aggregateData
   fanout:
