--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "coverage": "lerna run --concurrency 1 coverage",
     "deploy:dev": "lerna run deploy:dev",
     "publish:frontend:dev": "lerna run publish:dev --scope frontend",
-    "prettier": "lerna exec yarn prettier",
-    "prettier:ci": "lerna exec yarn prettier:ci",
+    "prettier": "lerna run prettier",
+    "prettier:ci": "lerna run prettier:ci",
     "run:all:dev": "yarn deploy:dev && yarn build:frontend && yarn publish:frontend:dev",
     "remove:all:dev": "lerna run --concurrency 1 remove:dev --scope 'frontend' && lerna run --concurrency 1 remove:dev --scope 'monitoring-*'",
     "print:name": "lerna run print:name"
