--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -12,8 +12,8 @@
     "coverage": "yarn test --coverage",
     "deploy:dev": "serverless deploy --stage dev",
     "remove:dev": "serverless remove --stage dev",
-    "prettier": "prettier --write src/**/*.ts",
-    "prettier:ci": "prettier --list-different src/**/*.ts",
+    "prettier": "prettier --write src/**/*.ts e2e/**/*.ts scripts/*.js",
+    "prettier:ci": "prettier --list-different src/**/*.ts e2e/**/*.ts scripts/*.js",
     "print:name": "echo ${npm_package_name}"
   },
   "dependencies": {
@@ -23,17 +23,18 @@
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
     "@types/aws-lambda": "^8.10.19",
+    "@types/chai": "^4.1.7",
     "@types/jest": "^23.3.2",
     "@types/mockdate": "^2.0.0",
     "@types/node": "^10.10.3",
+    "aws-testing-library": "^1.0.0",
+    "chai": "^4.2.0",
     "common": "file:./../common",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
     "jest": "23.6.0",
-    "jest-e2e-serverless": "^0.0.20",
     "mockdate": "^2.0.2",
     "serverless-iam-roles-per-function": "^1.0.4",
-    "serverless-offline": "^3.25.14",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-pseudo-parameters": "^2.4.0",
     "serverless-step-functions": "^1.13.0",
