support multiple deploy stages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-testing-library": "^5.9.0",
     "serverless-appsync-plugin": "^1.0.9",
     "serverless-plugin-tracing": "^2.0.0",
+    "serverless-s3-remover": "^0.6.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "source-map-explorer": "^1.7.0",
     "tslint": "^5.12.1",
@@ -46,9 +47,9 @@
     "eject": "react-scripts eject",
     "lint": "tslint 'src/**/*.ts?(x)'",
     "coverage": "TZ=GMT yarn test --coverage",
-    "deploy:dev": "serverless deploy --stage dev",
-    "remove:dev": "serverless emptyS3Bucket --stage dev && serverless remove --stage dev",
-    "publish:dev": "serverless syncToS3 --stage dev && serverless invalidateCloudFrontCache --stage dev",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
+    "publish": "serverless publishSite",
     "prettier": "prettier --write src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js scripts/*.js",
     "prettier:ci": "prettier --list-different src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js scripts/*.js",
     "print:name": "echo ${npm_package_name}"
