--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test:ci": "lerna run --concurrency 1 test:ci",
     "test:e2e": "lerna run --concurrency 1 test:e2e",
     "coverage": "lerna run --concurrency 1 coverage",
-    "deploy:dev": "lerna run deploy:dev",
-    "publish:frontend:dev": "lerna run publish:dev --scope frontend",
     "prettier": "lerna run prettier",
     "prettier:ci": "lerna run prettier:ci",
+    "deploy:dev": "lerna run deploy -- --stage dev",
+    "deploy:test": "lerna run deploy -- --stage test",
+    "publish:frontend:dev": "lerna run publish --scope frontend -- --stage dev",
+    "publish:frontend:test": "lerna run publish --scope frontend -- --stage test",
     "run:all:dev": "yarn deploy:dev && yarn build:frontend && yarn publish:frontend:dev",
-    "remove:all:dev": "lerna run --concurrency 1 remove:dev --scope 'frontend' && lerna run --concurrency 1 remove:dev --scope 'monitoring-*'",
+    "run:all:test": "yarn deploy:test && yarn build:frontend && yarn publish:frontend:test",
+    "remove:all:dev": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage dev && lerna run --concurrency 1 remove --scope 'monitoring-*' -- --stage dev",
+    "remove:all:test": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage test && lerna run --concurrency 1 remove --scope 'monitoring-*' -- --stage test",
     "print:name": "lerna run print:name"
   },
   "devDependencies": {
