--- a/lerna.json
+++ b/lerna.json
@@ -2,8 +2,5 @@
   "version": "23.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": [
-    "services/*",
-    "frontend"
-  ]
+  "packages": ["services/*", "frontend", "cicd"]
 }
